--- a/1-italapok/aiken.html
+++ b/1-italapok/aiken.html
@@ -42,6 +42,50 @@
       </aside>
       <section>
         <h1>Elektromechanikus gépek</h1>
+
+        <p>Howard Aiken, Grace Hopper és Konrad Zuse mind kiemelkedő alakjai a számítástechnika korai fejlődésének, akiknek munkája jelentős mértékben hozzájárult a modern számítógépek megteremtéséhez. Míg Howard Aiken és Grace Hopper az Egyesült Államokban dolgoztak a Harvard MARK gépein, Konrad Zuse Németországban fektette le az első programozható számítógép alapjait. Az ő történetük együttesen mutatja be, hogyan fejlődött a számítástechnika a 20. század közepén, és hogyan alakultak ki azok az eszközök, amelyek ma már nélkülözhetetlenek életünkben.</p>
+
+        <h1>Howard Aiken és a Harvard Mark I</h1>
+
+        <p>Howard Hathaway Aiken (1900-1973) amerikai mérnök és matematikus, aki a modern számítógépek egyik úttörőjének számít. Aiken a Harvard Egyetemen dolgozott, ahol felismerte, hogy a bonyolult tudományos számítások automatizálására van szükség. Az 1930-as évek végén kezdett el egy mechanikus számítógép ötletén dolgozni, amely képes lett volna komplex matematikai műveletek gyors és pontos elvégzésére.</p>
+
+        <p>Aiken az IBM vállalat támogatását szerezte meg, és így kezdődött meg a Harvard Mark I vagy más néven IBM Automatic Sequence Controlled Calculator (ASCC) fejlesztése, amely 1944-ben készült el. A Mark I az egyik első teljesen automatikus számítógép volt, amely képes volt nagyméretű, bonyolult számítások elvégzésére, ami különösen fontos volt a második világháború alatt.</p>
+
+        <h2>A Mark I jellemzői</h2>
+
+        <p>A Harvard Mark I hatalmas méretű gép volt, 15 méter hosszú és több mint 2,5 méter magas, több mint 750 000 alkatrészből állt, beleértve 3 500 relét és kilométerekben mérhető elektromos kábelt. A gép működése teljesen elektromechanikus volt, azaz relék és mechanikus alkatrészek kombinációjával végezte el a számításokat. A Mark I a számítási utasításokat papírszalagra lyukasztott kóddal olvasta be, és képes volt összeadásra, kivonásra, szorzásra, osztásra, valamint négyzetgyök kiszámítására.</p>
+
+        <p>A Mark I-t az amerikai haditengerészet különböző számítási feladatokhoz használta, beleértve a ballisztikus pályák, a robbanásmérnöki számítások és más haditechnikai számítások elvégzését. A gép percenként körülbelül 3 addíciót és 1 szorzást tudott elvégezni, ami akkoriban elképesztő teljesítménynek számított.</p>
+
+        <h1>Grace Hopper és a programozás úttörése</h1>
+
+        <p>Grace Hopper (1906-1992) a számítástechnika egyik legfontosabb alakja, aki jelentős mértékben hozzájárult a programozási nyelvek és a szoftverfejlesztés alapjainak megteremtéséhez. Matematikusként csatlakozott a Harvard Mark I projektjéhez, ahol Howard Aiken irányítása alatt dolgozott. Ő volt az egyik első nő, aki közvetlenül részt vett a számítástechnika fejlesztésében, és sokak szerint az egyik első "programozó" a modern értelemben.</p>
+
+        <p>Hopper feladata volt a Mark I programozása, ami magában foglalta a gép által végrehajtandó utasítások írását és a számítások ellenőrzését. Hamarosan a programozás úttörője lett, aki felismerte, hogy a gépek nyelvei túl bonyolultak ahhoz, hogy széles körben elterjedjenek. Azt javasolta, hogy fejlesszenek ki olyan programozási nyelveket, amelyek közelebb állnak a természetes emberi nyelvhez, így könnyebbé téve a programozást.</p>
+
+        <h2>COBOL és Grace Hopper öröksége</h2>
+
+        <p>Grace Hopper talán legismertebb hozzájárulása a COBOL (Common Business-Oriented Language) programozási nyelv megalkotása volt az 1950-es évek végén. A COBOL volt az egyik első magas szintű programozási nyelv, amelyet üzleti célú alkalmazások fejlesztésére használtak. A COBOL-t úgy tervezték, hogy könnyen olvasható és írható legyen, így a programozás többé nem csak a matematikusok és mérnökök kiváltsága lett, hanem szélesebb körben is hozzáférhetővé vált.</p>
+
+        <p>Hopper emellett hozzájárult az első fordító (compiler) kifejlesztéséhez is, amely a programozási nyelveken írt kódot gépi nyelvre fordította le, így a gép számára végrehajthatóvá tette azt. Ez a találmány forradalmasította a programozást, mivel lehetővé tette, hogy a programozók hatékonyabban és gyorsabban dolgozzanak.</p>
+
+        <p>Grace Hopper munkássága nemcsak a programozási nyelvek fejlődését segítette elő, hanem meghatározta a számítástechnika irányát is az elkövetkező évtizedekben. Az ő öröksége a modern szoftverfejlesztés alapjainak lefektetése, és ma is tisztelettel emlékeznek rá a számítástechnikai közösségben.</p>
+
+        <h1>Konrad Zuse és a Z-gépek</h1>
+
+        <p>Miközben Aiken és Hopper az Egyesült Államokban dolgoztak, Németországban egy másik zseniális mérnök, Konrad Zuse (1910-1995) függetlenül dolgozott az első programozható számítógépek megalkotásán. Zuse gépei az 1930-as és 1940-es évek során jöttek létre, és bár a munkáját a háborús körülmények korlátozták, ő volt az első, aki sikeresen létrehozott egy működő, programozható számítógépet.</p>
+
+        <h2>Z1 és Z3: Az első programozható számítógépek</h2>
+
+        <p>Zuse első számítógépe, a Z1, 1938-ban készült el, és mechanikus alkatrészekből állt. A Z1 bináris (kettős) számrendszert használt, és képes volt egyszerű aritmetikai műveletek végrehajtására. Bár a gép nem működött megbízhatóan a mechanikus alkatrészek pontatlansága miatt, a Z1 volt az első példa arra, hogy egy számítógép programozható legyen.</p>
+
+        <p>Zuse következő gépe, a Z3, 1941-ben készült el, és ez volt a világ első teljesen működő programozható számítógépe. A Z3 elektromechanikus relékből állt, és bináris rendszert használt, akárcsak elődje. A gép képes volt komplex aritmetikai műveletek végrehajtására, és programozható volt, ami azt jelentette, hogy a felhasználók különböző feladatokat adhatnak neki.</p>
+
+        <p>A Z3 gép hatalmas jelentőséggel bírt a számítástechnika történetében, mivel megmutatta, hogy a számítógépek programozhatók és univerzálisak lehetnek. Bár a Z3 a második világháború során megsemmisült, Zuse munkássága és gépei fontos mérföldkövet jelentettek a számítástechnika fejlődésében.</p>
+
+        <h1>Összegzés</h1>
+
+        <p>Howard Aiken, Grace Hopper és Konrad Zuse együttes munkája olyan alapokat teremtett, amelyek nélkül a modern számítógépek nem léteznének. A Harvard Mark I és az azt követő gépek megmutatták, hogy a számítógépek milyen hatalmas potenciállal rendelkeznek a tudományos és katonai alkalmazásokban. Grace Hopper felismerte a programozásban rejlő lehetőségeket, és olyan eszközöket fejlesztett ki, amelyek elérhetővé tették a számítógépek használatát szélesebb körben is. Konrad Zuse pedig az első működő programozható számítógép megalkotásával alapvető fontosságú volt a számítógépek történetében. Az ő munkásságuk együtt teremtette meg a modern számítógépek alapjait.</p>
       </section>
     </main>
 
