--- a/1-italapok/cpu.html
+++ b/1-italapok/cpu.html
@@ -45,11 +45,11 @@
 
         <p>A processzor (CPU, Central Processing Unit) a számítógép „agya”, amely végrehajtja az utasításokat és feldolgozza az adatokat. A processzor a számítógép központi eleme, amely irányítja a többi komponens működését, és elvégzi az összes alapvető számítási feladatot. A modern processzorok rendkívül összetett, nagy teljesítményű áramkörök, amelyek számos kulcsfontosságú tulajdonsággal rendelkeznek, hogy biztosítsák a gyors és hatékony működést.</p>
 
-        <h2>Utasításkészlet (ISA - Instruction Set Architecture)</h2>
+        <h1>Utasításkészlet (ISA - Instruction Set Architecture)</h1>
 
         <p>Az <a href="http://hu.wikipedia.org/wiki/Utasításkészlet" target="_blank">utasításkészlet</a> (ISA) határozza meg a processzor által végrehajtható alapvető műveletek készletét, például az összeadás, kivonás, adatmozgatás és logikai műveletek. Az ISA a hardver és a szoftver közötti interfészként működik, mivel a szoftver utasításait a processzor az ISA-n keresztül értelmezi és hajtja végre. Az utasításkészlet meghatározza a processzor architektúráját, és két fő típusát különböztetjük meg: a RISC (Reduced Instruction Set Computer) és a CISC (Complex Instruction Set Computer) architektúrákat.</p>
 
-        <h3>Utasításkészlet</h3>
+        <h3>Egy processzor utasításkészlete:</h3>
         <ul>
           <li>LOAD a number from RAM into the CPU (egy szám betöltése a memóriából a processzorba)</li>
           <li>ADD two numbers together (két szám összeadása)</li>
@@ -61,18 +61,18 @@
           <li>INput from a device such as a keyboard (adat bevitele egy erre szolgáló perifériáról, például billentyűzetről)</li>
         </ul>
 
-        <h3>Kétféle utasításkészlet</h3>
+        <h3>RISC és CISC</h3>
 
         <p>A <strong>RISC</strong> (Reduced Instruction Set Computer - egyszerűsített utasításkészletű számítógép) architektúra az egyszerű, gyorsan végrehajtható utasításokra épít, amelyek minimalizálják a processzor komplexitását és növelik a végrehajtási sebességet. A RISC processzorok kevesebb, de optimalizált utasítást használnak, így a végrehajtási idő rövidebb lehet, és gyakran magasabb az energiahatékonyságuk is.</p>
         <p>A <strong>CISC</strong> (Complete Instruction Set Computer - teljes utasításkészletű számítógép) architektúra ezzel szemben bonyolultabb utasításokat kínál, amelyek egyetlen utasítással több műveletet is végre tudnak hajtani. Ez az architektúra a programozók számára egyszerűbbé teszi a fejlesztést, mivel kevesebb utasítást kell megírniuk, ugyanakkor a processzor bonyolultságát növeli. A CISC processzorok jellemzően több tranzisztort és erőforrást igényelnek, ami magasabb fogyasztást és hőtermelést eredményezhet.</p>
 
-        <h2>ALU (Aritmetikai-logikai egység) és CU (Vezérlő egység)</h2>
+        <h1>ALU (Aritmetikai-logikai egység) és CU (Vezérlő egység)</h1>
 
         <p>A processzor két alapvető részegységből áll: az aritmetikai-logikai egységből (ALU) és a vezérlő egységből (CU). Az ALU felelős a számítási műveletek, például az összeadás, kivonás, szorzás, osztás, valamint a logikai műveletek (AND, OR, NOT) végrehajtásáért. Az ALU a CPU egyik legfontosabb része, mivel itt történik az adatok tényleges feldolgozása.</p>
 
         <p>A vezérlő egység (CU) irányítja a processzor működését, és vezérli a program végrehajtását. A CU feladata, hogy dekódolja az utasításokat, majd koordinálja az ALU, a memóriák és a bemeneti/kimeneti eszközök közötti adatmozgásokat. Ez az egység határozza meg, hogy a processzor melyik utasítást hajtja végre és milyen sorrendben.</p>
 
-        <h2>A processzor tulajdonságai</h2>
+        <h1>A processzor tulajdonságai</h1>
 
         <ul>
           <li><strong>Órajel (Clock Speed):</strong> Az órajel határozza meg a processzor működési sebességét, vagyis hogy hány műveletet képes végrehajtani másodpercenként. Az órajelet gigahertzben (GHz) mérik, és minél magasabb az órajel, annál több műveletet képes végrehajtani a processzor másodpercenként. Azonban az órajel növekedésével a hőtermelés is nő, ezért a hűtési megoldások is kulcsfontosságúak.</li>
@@ -106,17 +106,17 @@
         <h3>PowerCert - Thermal Compound Paste, Heat Sink, Air vs Water Cooling Explained</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pzsPWY-ofQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-        <h2>Az univerzális processzor architektúrája - Intel 4004 jelentősége</h2>
+        <h1>Az univerzális processzor architektúrája - Intel 4004 jelentősége</h1>
 
         <p>Az <strong>Intel 4004</strong>, amelyet 1971-ben mutattak be, az első kereskedelmi forgalomban kapható mikroprocesszor volt, és mérföldkőnek számít a számítástechnika történetében. Ez a 4 bites processzor volt az első, amely egyetlen chipre integrálta a számítógép központi feldolgozó egységét, és ezzel megnyitotta az utat a modern mikroprocesszorok és a személyi számítógépek kifejlesztése előtt. Az Intel 4004 megmutatta, hogy egy processzor képes egyetlen chipen kezelni a számítógépes feladatokat, ami forradalmasította a számítógépes ipart, és elindította a miniatürizálás és a mikroelektronika korszakát.</p>
 
         <p>MARK, Z, ABC, ENIAC, EDVAC, UNIVAC</p>
         
-        <h2>Az Intel és az AMD jellemzői</h2>
+        <h1>Az Intel és az AMD jellemzői</h1>
 
         <p>Az Intel és az AMD két vezető cég a processzortermelés terén, és bár mindkettő a számítástechnikai ipar élvonalába tartozik, különböző megközelítéseket alkalmaznak a processzorok fejlesztésében. Az alábbiakban bemutatjuk a két cég jellemzőit és a processzoraik közötti főbb különbségeket.</p>
 
-        <h2>Intel</h2>
+        <h3>Intel</h3>
 
         <ol>
           <li><strong>Architektúra:</strong> Az Intel processzorok a CISC (Complex Instruction Set Computer) architektúrára építenek, amely bonyolultabb utasításkészleteket használ, lehetővé téve több művelet végrehajtását egyetlen utasítással. Az Intel processzorok számos utasítást tartalmaznak, amelyek az összetett feladatok gyorsabb végrehajtását célozzák meg.</li>
@@ -129,7 +129,7 @@
 
         <p>Főbb termékcsaládok: Core i3, i5, i7, i9 (személyi számítógépek), Xeon (szerverek és munkaállomások), Atom (mobil eszközök és alacsony fogyasztású eszközök).</p>
 
-        <h2>AMD</h2>
+        <h3>AMD</h3>
 
         <ol>
           <li><strong>Architektúra:</strong> Az AMD processzorok a RISC (Reduced Instruction Set Computer) architektúrára építenek, amely egyszerűbb utasításokat használ, de lehetővé teszi a nagyobb párhuzamosságot és hatékonyságot az alacsonyabb utasításszámú programoknál. Az AMD processzorok egyre inkább integrálják a CISC és RISC jellemzőit.</li>
@@ -142,7 +142,7 @@
 
         <p>Főbb termékcsaládok: Ryzen (asztali számítógépek), Ryzen Threadripper (magas teljesítményű munkaállomások), EPYC (szerverek), Athlon (belépő szintű és alacsony fogyasztású eszközök).</p>
 
-        <h2>Különbségek és összehasonlítások:</h2>
+        <h3>Különbségek és összehasonlítások:</h3>
 
         <ul>
           <li><strong>Teljesítmény:</strong> Az Intel processzorok gyakran erősebb egy- és kétmagos teljesítményt kínálnak, míg az AMD processzorok a több magot és szálat igénylő feladatokban, mint a több szálú alkalmazások és játékok, általában jobb teljesítményt nyújtanak.</li>
@@ -152,7 +152,7 @@
           <li><strong>Piaci részesedés és felhasználói bázis:</strong> Az Intel hosszú ideig dominálta a piacon, de az AMD a Ryzen sorozattal és az EPYC processzorokkal jelentős piaci részesedést szerzett, és egyre nagyobb népszerűségnek örvend a felhasználók és a vállalatok körében.</li>
         </ul>
 
-        <h3>Specifikus processzorok</h3>
+        <h1>Specifikus processzorok</h1>
         <p>Hangkártya</p>
         <p>Videókártya</p>
         <p>Hálózati kártya</p>
