--- a/1-italapok/tarcirc.html
+++ b/1-italapok/tarcirc.html
@@ -41,7 +41,17 @@
         </nav>
       </aside>
       <section>
-        <h1>Adattárolás a számítógépben</h1>
+        <p>Tartalom</p>
+        <ul id="t">
+          <li><a href="#tar">Adattárolás a számítógépben</a></li>
+          <li><a href="#lyuk">De mik azok a lyukkártyák?</a></li>
+          <li><a href="#tcirc">Tároló áramkörök</a></li>
+          <li><a href="#ram">RAM (Random Access Memory)</a></li>
+          <li><a href="#rom">ROM (Read-Only Memory)</a></li>
+          <li><a href="#o">Összefoglalás</a></li>
+        </ul>
+
+        <h1 id="tar">Adattárolás a számítógépben</h1>
 
         <p>A számítógépek memóriarendszere az évtizedek során jelentős fejlődésen ment keresztül, amely az első mechanikus és elektromechanikus rendszerektől kezdve egészen a modern szilícium-alapú memóriákig terjed. A kezdeti időszakban, a 19. század végén és a 20. század elején a lyukkártyák és papírszalagok szolgáltak adatbevitelre és programozásra, bár nem voltak memóriának nevezhetőek a hagyományos értelemben. Ezeket az eszközöket a korai számítógépeken és szövőszékeken alkalmazták adatok tárolására és feldolgozására. Az első jelentős fejlődés az 1950-es években következett be a mágneses dobok bevezetésével. Ezek az eszközök egy forgó mágneses hengert használtak, amelyre az adatokat mágneses minták formájában vitték fel. Azonban a mágneses dobok hozzáférési sebessége és megbízhatósága korlátozott volt, így hamarosan elavultak.</p>
 
@@ -53,7 +63,7 @@
 
         <p>Összességében a számítógépek memóriarendszere folyamatosan fejlődött az első mechanikus tárolóeszközöktől kezdve a modern gyors és megbízható memória típusokig. A technológiai fejlődés célja mindig az volt, hogy növelje a tárolókapacitást, csökkentse az adatok hozzáférési idejét és javítsa az energiahatékonyságot, ezzel lehetővé téve a számítástechnikai rendszerek teljesítményének folyamatos növelését és az adatok hatékony kezelését.</p>
 
-        <h1>De mik azok a lyukkártyák?</h1>
+        <h1 id="lyuk">De mik azok a lyukkártyák?</h1>
 
         <p>A <strong>lyukkártyák</strong> az egyik legkorábbi formái a számítógépes adatbevitelnek és -feldolgozásnak. Ezek a kártyák papírból készültek, és az adatokat perforált lyukak formájában tárolták. A lyukkártyák olyan bináris kódot tartalmaztak, amelyet mechanikus vagy elektromos olvasóeszközök képesek voltak értelmezni. A lyukkártyák jelentősége a 19. és 20. század elején volt a számítástechnika fejlődésében, mivel lehetővé tették az adatok hatékony rögzítését, tárolását és feldolgozását.</p>
 
@@ -67,13 +77,13 @@
 
         <p>A lyukkártyák, Jacquard szövőszéke, Babbage analitikai gépe, és Hollerith adatfeldolgozó gépe mind jelentős lépéseket képviseltek a technológiai fejlődésben, különösen a számítógépes vezérlés és adatfeldolgozás területén. A lyukkártyás vezérlés lehetővé tette a bonyolult adatfeldolgozási és programozási feladatok automatizálását, ami alapvető fontosságú volt a modern számítógépes rendszerek kifejlesztésében.</p>
 
-        <h1>Tároló áramkörök</h1>
+        <h1 id="tcirc">Tároló áramkörök</h1>
 
         <p>A RAM (Random Access Memory) és a ROM (Read-Only Memory) két alapvető típusú memória, amelyek különböző funkciókat töltenek be a számítógépek és más elektronikus eszközök működésében. Bár mindkettő memória, szerepük és tulajdonságaik jelentősen eltérnek egymástól.</p>
 
         <p><a href="https://drive.google.com/file/d/1i2G-29ALc-lVlISdQ0e6N7nT3_xPoIx6/view?usp=sharing" target=_blank>Máté István Zsolt: Memóriák és csatlakoztatásuk. A BIOS</a></p>
 
-        <h1>RAM (Random Access Memory)</h1>
+        <h1 id="ram">RAM (Random Access Memory)</h1>
         <p>Magyarul "véletlen elérésű memória", ha szó szerint fordítjuk, de ez a benne lévő adat elérésére vonatkozik, azaz helyesebb megnevezése a "tetszőleges elérésű memória".</p>
 
         <ol>
@@ -98,7 +108,7 @@
         <h3>RAM Explained - Random Access Memory</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PVad0c2cljo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 
-        <h1>ROM (Read-Only Memory)</h1>
+        <h1 id="rom">ROM (Read-Only Memory)</h1>
 
         <ol>
           <li><strong>Típus:</strong> A ROM egy írásvédett memória, amelyet nem lehet módosítani (vagy csak nagyon nehezen). Az adatok egy előre meghatározott és fixált formában tárolódnak, és csak olvashatók.</li>
@@ -114,7 +124,7 @@
           <li><strong>Kapacitás:</strong> A ROM kapacitása általában kisebb, mint a RAM-é, mivel az adatok tartalma nem változik, és nem szükséges nagy mennyiségű ideiglenes tárolás.</li>
         </ol>
 
-        <h3>Összefoglalás</h3>
+        <h1 id="o">Összefoglalás</h1>
 
         <p>A RAM és a ROM alapvető szerepet játszanak a számítógépek és elektronikus eszközök működésében. A RAM a rendszer aktív, ideiglenes memóriájaként működik, gyors adatfeldolgozást biztosítva, míg a ROM a rendszer állandó, nem módosítható adatait és programjait tárolja, amely biztosítja az eszközök alapvető működését és indítását. Az egyik az adatok gyors elérését és frissítését teszi lehetővé, míg a másik a stabil és megbízható alapvető információkat tartalmazza, amelyekre a rendszer folyamatosan támaszkodik.</p>
       </section>
