--- a/1-italapok/gen.html
+++ b/1-italapok/gen.html
@@ -152,6 +152,8 @@
           <li>UNIVAC I (Universal Automatic Computer I): Az első kereskedelmi forgalomban is kapható számítógép, amelyet 1951-ben mutattak be, és széles körben használtak üzleti és kormányzati alkalmazásokban.</li>
         </ul>
 
+        <p><a href="https://sg.hu/cikkek/43187/az_eniac_szuletesene" target="_blank">Az ENIAC születésének igaz története</a></p>
+
         <h3>Második generáció (1950-es évek közepe - 1960-as évek közepe)</h3>
 
         <p><strong>Technológia: Tranzisztorok</strong></p>
@@ -204,6 +206,16 @@
         <h3>Összegzés</h3>
 
         <p>A számítógép-generációk fejlődése jól tükrözi a technológiai újításokat és a számítástechnika gyors ütemű fejlődését. A vákuumcsövektől a tranzisztorokon át az integrált áramkörökig és a mikroprocesszorokig vezető út során a számítógépek mérete csökkent, teljesítménye nőtt, és a felhasználási területeik egyre szélesebbek lettek. A jövő generációi valószínűleg tovább fogják bővíteni a műveletvégzés, az ember-gép kommunikáció és felhasználási területek ma is széles palettáját.</p>
+
+        <h3>Vault 1337 - Bevezetés az informatikába - Történelem</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/J6mJorF8rno" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+    
+        <h3>Számító Ada - A programozás grófnője</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/sn30PsfO5Sc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+        <h3>Források</h3>
+        <p><a href="https://drive.google.com/file/d/1ckct4h6YpjO-WdOGJoBRitSamXNveKEm/view?usp=sharing" target=_blank>Tamás Ferenc: A számítástechnika kultúrtörténete</a></p>
+        <p><a href="https://drive.google.com/file/d/1erUvHQSZjhfuhI2hS_VX7jNMZM4umANI/view?usp=sharing" target=_blank>Walter Isaacson: Innovátorok (részlet)</a></p>
 
         <h1 id="szuper">A szuperszámítógép és Seymour Cray</h1>
 
